# Samurai-Fight

./: .gitignore  CLAUDE.md  CMakeLists.txt  DEVELOPMENT_GUIDE.md
.claude/plans/: phase1-project-framework.md  phase2-character-system.md  run_state_plan.md  screen_shake_plan.md
assets/characters/musashi/: config.json
assets/characters/sakura/: config.json
assets/config/: game_config.json  keybindings.json
development/: DEVELOPMENT_GUIDE.md  PHASE3_FEATURES.md  memo.md  phase1-framework-overview.md  phase2-character-system.md  phase4-match-system.md  phase6-settings-config.md  settings.json
docs/: AUDIO_USAGE.md  CHARACTER_AUDIO.md
src/: main.cpp
src/battle/: MatchHud.cpp  MatchHud.h  MatchManager.cpp  MatchManager.h  RoundManager.cpp  RoundManager.h
src/components/: AnimationComponent.cpp  AnimationComponent.h  HealthComponent.cpp  HealthComponent.h  HitboxComponent.cpp  HitboxComponent.h  StaminaComponent.cpp  StaminaComponent.h
src/core/: Constants.h  FrameTimer.cpp  FrameTimer.h  Game.cpp  Game.h  GameLoop.cpp  GameLoop.h
src/effects/: ScreenShake.cpp  ScreenShake.h
src/entities/: Character.cpp  Character.h  CharacterData.cpp  CharacterData.h  CharacterFactory.cpp  CharacterFactory.h  Entity.cpp  Entity.h
src/input/: InputBuffer.cpp  InputBuffer.h  InputCommand.h  InputManager.cpp  InputManager.h
src/managers/: AudioManager.cpp  AudioManager.h  ConfigManager.cpp  ConfigManager.h  ResourceManager copy.cpp  ResourceManager.cpp  ResourceManager.h  SceneManager.cpp  SceneManager.h
src/scenes/: BattleScene.cpp  BattleScene.h  CharacterSelectScene.cpp  CharacterSelectScene.h  MainMenuScene.cpp  MainMenuScene.h  MenuItem.h  PauseScene.cpp  PauseScene.h  ResultScene.cpp  ResultScene.h  Scene.cpp  Scene.h  SettingsScene.cpp  SettingsScene.h
src/states/: AttackState.cpp  AttackState.h  BlockState.cpp  BlockState.h  CharacterState.cpp  CharacterState.h  CharacterStateType.h  CrouchState.cpp  CrouchState.h  DeadState.cpp  DeadState.h  HurtState.cpp  HurtState.h  IdleState.cpp  IdleState.h  JumpState.cpp  JumpState.h  MoveState.cpp  MoveState.h  RollState.cpp  RollState.h  RunState.cpp  RunState.h  StateMachine.cpp  StateMachine.h  VictoryState.cpp  VictoryState.h  WalkState.cpp  WalkState.h
src/ui/: HealthBar.cpp  HealthBar.h  ScoreDisplay.cpp  ScoreDisplay.h  StaminaBar.cpp  StaminaBar.h  Timer.cpp  Timer.h
src/utils/: JsonLoader.cpp  JsonLoader.h  utils.h
